# neiro

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1ad8970be6bc_init.py  3d86b5a44cdc_create_models.py  4f3ef1546989_add_model_file_path_1_0.py  63ba65fb0f11_init.py  687383375437_add_model_oval_and_rect.py  99d90e235844_add_model_file_path.py  bc4f67ab8f83_create_models.py  c30c26ccd1b6_update_model_oval.py
src/: decorators.py  main.py
src/cli_menu/: circles.py  lines.py  ovals.py  points.py  rectangles.py  squares.py
src/config/: settings.py
src/db/: postgres.py
src/models/: circles.py  file_paths.py  lines.py  ovals.py  points.py  rectangles.py  squares.py
src/schemas/: circles.py  file_paths.py  lines.py  ovals.py  point.py  rectangles.py  squares.py
src/services/: abstract.py  circles.py  lines.py  ovals.py  points.py  rectangles.py  squares.py
